--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -60,9 +60,14 @@ collections:
                     fields:
                       [
                         { label: Title, name: title, widget: string },
-                        { label: Column 1, name: column1, widget: text },
-                        { label: Column 2, name: column2, widget: text },
-                        { label: Column 3, name: column3, widget: text },
+                        {
+                          label: Background Colour,
+                          name: backgroundColor,
+                          widget: string,
+                        },
+                        { label: Column 1, name: column1, widget: "markdown" },
+                        { label: Column 2, name: column2, widget: "markdown" },
+                        { label: Column 3, name: column3, widget: "markdown" },
                       ],
                   },
                 ],
