--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -27,10 +27,21 @@ collections:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Description", name: "description", widget: "text" }
-      - { label: "Featured Post", name: "featuredpost", widget: "boolean" }
-      - { label: "Featured Image", name: "featuredimage", widget: image }
       - { label: "Body", name: "body", widget: "markdown" }
-      - { label: "Tags", name: "tags", widget: "list" }
+      - {
+          label: "Row",
+          name: "row",
+          widget: "list",
+          fields:
+            [
+              {
+                label: "Column",
+                name: "column",
+                widget: "list",
+                fields: [{ label: Content, name: content, widget: "markdown" }],
+              },
+            ],
+        }
 
   - name: "pages"
     label: "Pages"
