--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -38,7 +38,7 @@ collections:
                 label: "Title",
                 name: title,
                 widget: string,
-                require: false,
+                required: false,
               },
               {
                 label: "Column",
@@ -79,7 +79,7 @@ collections:
                   label: "Title",
                   name: title,
                   widget: string,
-                  require: false,
+                  required: false,
                 },
                 {
                   label: "Column",
@@ -117,7 +117,7 @@ collections:
                   label: "Title",
                   name: title,
                   widget: string,
-                  require: false,
+                  required: false,
                 },
                 {
                   label: "Column",
